--- a/prueba-web/home.html
+++ b/prueba-web/home.html
@@ -14,9 +14,9 @@
             <li><a href="">contacto</a></li>
         </ul>
     </header>
- <h2>Esta es una prueba</h2>
+ <h2>Esta es una prueba!!!</h2>
 
- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima eius sed cumque hic molestiae saepe ratione repudiandae magni facere nihil itaque consequatur, tempora provident exercitationem obcaecati iusto placeat velit ex!</p>
+ <p style="font-weight: bold ;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima eius sed cumque hic molestiae saepe ratione repudiandae magni facere nihil itaque consequatur, tempora provident exercitationem obcaecati iusto placeat velit ex!</p>
     
 </body>
 </html>
